--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "framer-motion": "^12.6.2",
     "next": "15.2.3",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
     "react-spinners": "^0.15.0"
   },
   "devDependencies": {
