--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "formik": "^2.4.6",
     "framer-motion": "^12.6.2",
     "lucide-react": "^0.487.0",
     "next": "15.2.3",
+    "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
