--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-query": "^5.74.3",
+    "aos": "^2.3.4",
+    "axios": "^1.8.4",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.2",
+    "install": "^0.13.0",
     "lucide-react": "^0.487.0",
     "next": "15.2.3",
+    "next-auth": "^5.0.0-beta.25",
     "next-sitemap": "^4.2.3",
+    "npm": "^11.3.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.5",
     "yup": "^1.6.1"
   },
   "devDependencies": {
