--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_API_BASE_URL=https://thefullsnackdev.onrender.com
 AUTH_SECRET=CC/1uqDnvB8iY5dClmD14LUzDmgAIRkSKOpeAW0o+gc=
+NEXT_PUBLIC_PAYSTACK_PUBLIC_KEY=pk_test_ef7723792c2f2d99fe9a0b629ddb1eb8e55f5025
