--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-paystack": "^6.0.0",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-spinners": "^0.15.0",
