--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@tanstack/react-query": "^5.74.3",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.2",
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
+    "motion": "^12.9.7",
     "next": "15.2.3",
     "next-auth": "^5.0.0-beta.25",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.6",
     "npm": "^11.3.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
@@ -32,6 +36,7 @@
     "react-responsive": "^10.0.1",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.2.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
