--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.74.3",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
