--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
+    "@react-three/fiber": "^9.1.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-query": "^5.74.3",
@@ -38,6 +39,7 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.2.0",
+    "three": "^0.176.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -46,6 +48,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.176.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "tailwindcss": "^4",
