--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-responsive": "^10.0.1",
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5",
+    "react-use": "^17.6.0",
     "tailwind-merge": "^3.2.0",
     "three": "^0.176.0",
     "yup": "^1.6.1"
