--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.5",
     "react-use": "^17.6.0",
+    "react-use-downloader": "^1.2.10",
     "tailwind-merge": "^3.2.0",
     "three": "^0.176.0",
     "yup": "^1.6.1"
