--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/themes": "^3.2.1",
     "@react-three/fiber": "^9.1.2",
     "@reduxjs/toolkit": "^2.6.1",
@@ -18,6 +20,7 @@
     "@tanstack/react-query": "^5.74.3",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotted-map": "^2.2.3",
     "formik": "^2.4.6",
@@ -42,7 +45,7 @@
     "react-toastify": "^11.0.5",
     "react-use": "^17.6.0",
     "react-use-downloader": "^1.2.10",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.0",
     "three": "^0.176.0",
     "yup": "^1.6.1"
   },
@@ -56,6 +59,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
