--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/themes": "^3.2.1",
     "@react-three/fiber": "^9.1.2",
@@ -38,7 +41,6 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "react-paystack": "^6.0.0",
     "react-redux": "^9.2.0",
     "react-responsive": "^10.0.1",
     "react-spinners": "^0.15.0",
