--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
     "dotted-map": "^2.2.3",
     "formik": "^2.4.6",
     "framer-motion": "^12.6.2",
