--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
     "motion": "^12.9.7",
-    "next": "15.2.3",
+    "next": "^15.3.5",
     "next-auth": "^5.0.0-beta.25",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
